Added filter capability

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tailwind-starter",
+  "name": "emoji-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,8 +18,8 @@
     "build": "yarn build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "postcss src/tailwind.css -o src/main.css",
-    "watch:css": "postcss src/tailwind.css -o src/main.css"
+    "build:css": "postcss src/tailwind.css -o src/styles.css",
+    "watch:css": "postcss src/tailwind.css -o src/styles.css"
   },
   "browserslist": {
     "production": [
